# Simple-Python-Proxy-Handler

./: .gitignore  README.md  cert.pem  main.py  proxy.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
docs/: cert.pem  cert_pkey.pem
src/server/: proxy.py
src/socket_server/: proxy.py
tests/: conftest.py  test_proxy.py
utils/: proxy_globals.py
