[metadata]
name = proxy-handler
description = content modififying http proxy-handler
author = Nurs Still
license = MIT
licence_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = 
    server
install_requires = 
    requests>=2.27
python_requires = >=3.8
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing = 
    pytest>=7.1
    pytest-cov>=3.0
    mypy>=0.941
    flake8>=4.0
    tox>=3.24
    
[options.package_data]
server = py.typed

[flake8]
max-line-length = 160